[package]
name = "dockm"
version = "0.1.0"
authors = ["Emil Haugbergsmyr <emil@raeven.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plist = { version = "1.1.0" }
serde = { version = "1.0.125", features = [ "derive" ] }
regex = { version = "1" }
rand = "0.8.3"
os-version = "0.1.1"